# Kestrel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dep.cmake
data/: sensor_cfg.yml
sensor/: CMakeLists.txt  Collector.h  DataSource.cpp  DataSource.h  SharedObjectLoader.h  main.cpp
sensor/config/: ConfigParser.h
sensor/policy/: IOPolicy.h
tests/: CMakeLists.txt  test_main.cpp
